--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/master.css">
   <title>SASS PITTORE</title>
 </head>
 <body>
+  <header>
+    <div class="cmd">
+      <ul>
+        <li>
+          <i class="fas fa-phone-alt"></i>
+          <p>1-877-582-6735</p>
+        </li>
+        <li>
+          <i class="fas fa-comment-alt"></i>
+          <p>Chat</p>
+        </li>
+        <li>
+          <i class="fas fa-user-circle"></i>
+          <p>Sign In</p>
+        </li>
+        <li>
+          <i class="fas fa-comment-alt"></i>
+          <p>Cart</p>
+        </li>
+        <li>
+          <select class="" name="">
+            <option value="">Ciao</option>
+          </select>
+        </li>
+      </ul>
+    </div>
+    <div class="nav">
+
+    </div>
+  </header>
 
 </body>
 </html>
