--- a/index.html
+++ b/index.html
@@ -10,35 +10,50 @@
 </head>
 <body>
   <header>
-    <div class="cmd">
-      <ul>
-        <li>
-          <i class="fas fa-phone-alt"></i>
-          <p>1-877-582-6735</p>
-        </li>
-        <li>
-          <i class="fas fa-comment-alt"></i>
-          <p>Chat</p>
-        </li>
-        <li>
-          <i class="fas fa-user-circle"></i>
-          <p>Sign In</p>
-        </li>
-        <li>
-          <i class="fas fa-comment-alt"></i>
-          <p>Cart</p>
-        </li>
-        <li>
-          <select class="" name="">
-            <option value="">Ciao</option>
-          </select>
-        </li>
-      </ul>
-    </div>
-    <div class="nav">
-
+    <div class="container">
+      <div class="cmd flex">
+        <ul class="flex">
+          <li>
+            <i class="fas fa-phone-alt"></i>
+            <span>1-877-582-6735</span>
+          </li>
+          <li>
+            <i class="fas fa-comment-alt"></i>
+            <span>Chat</span>
+          </li>
+          <li>
+            <i class="fas fa-user-circle"></i>
+            <span>Sign In</span>
+          </li>
+          <li>
+            <i class="fas fa-comment-alt"></i>
+            <span>Cart</span>
+          </li>
+          <li>
+            <select class="" name="">
+              <option value="">Ciao</option>
+            </select>
+          </li>
+        </ul>
+      </div>
+      <div class="nav flex">
+        <div class="logo">
+          <img src="./assets/img/logo_painter.png" alt="logo">
+        </div>
+        <div class="nav-list flex">
+          <ul>
+            <li>Products</li>
+            <li>Brushes</li>
+            <li>Wacom Tablets</li>
+            <li>Special Offers</li>
+            <li>Free Trials</li>
+            <li>Business</li>
+            <li>Support</li>
+            <li>Learning</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </header>
-
 </body>
 </html>
