--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         </div>
         <div class="nav-list flex">
           <ul>
-            <li>Products</li>
-            <li>Brushes</li>
+            <li>Products <i class="fas fa-angle-down"></i></li>
+            <li>Brushes <i class="fas fa-angle-down"></i></li>
             <li>Wacom Tablets</li>
             <li>Special Offers</li>
             <li>Free Trials</li>
             <li>Business</li>
-            <li>Support</li>
-            <li>Learning</li>
+            <li>Support <i class="fas fa-angle-down"></i></li>
+            <li>Learning <i class="fas fa-angle-down"></i></li>
           </ul>
         </div>
       </div>
