--- a/index.html
+++ b/index.html
@@ -12,50 +12,74 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <div class="cmd flex">
-        <ul class="flex">
-          <li>
-            <i class="fas fa-phone-alt"></i>
-            <span>1-877-582-6735</span>
-          </li>
-          <li>
-            <i class="fas fa-comment-alt"></i>
-            <span>Chat</span>
-          </li>
-          <li>
-            <i class="fas fa-user-circle"></i>
-            <span>Sign In</span>
-          </li>
-          <li>
-            <i class="fas fa-comment-alt"></i>
-            <span>Cart</span>
-          </li>
-          <li>
-            <select class="" name="">
-              <option value="">Ciao</option>
-            </select>
-          </li>
-        </ul>
-      </div>
-      <div class="nav flex">
-        <div class="logo">
-          <img src="./assets/img/logo_painter.png" alt="logo">
-        </div>
-        <div class="nav-list flex">
-          <ul>
-            <li>Products <i class="fas fa-angle-down"></i></li>
-            <li>Brushes <i class="fas fa-angle-down"></i></li>
-            <li>Wacom Tablets</li>
-            <li>Special Offers</li>
-            <li>Free Trials</li>
-            <li>Business</li>
-            <li>Support <i class="fas fa-angle-down"></i></li>
-            <li>Learning <i class="fas fa-angle-down"></i></li>
+    <nav class="padding-bottom5">
+      <div class="container">
+        <div class="cmd flex">
+          <ul class="flex">
+            <li>
+              <i class="fas fa-phone-alt"></i>
+              <span>1-877-582-6735</span>
+            </li>
+            <li>
+              <i class="fas fa-comment-alt"></i>
+              <span>Chat</span>
+            </li>
+            <li>
+              <i class="fas fa-user-circle"></i>
+              <span>Sign In</span>
+            </li>
+            <li>
+              <i class="fas fa-comment-alt"></i>
+              <span>Cart</span>
+            </li>
+            <li>
+              <select class="" name="">
+                <option value="">Ciao</option>
+              </select>
+            </li>
           </ul>
         </div>
+        <div class="nav-menu flex">
+          <div class="logo">
+            <img src="./assets/img/logo_painter.png" alt="logo">
+          </div>
+          <div class="nav-list flex">
+            <ul>
+              <li>Products <i class="fas fa-angle-down"></i></li>
+              <li>Brushes <i class="fas fa-angle-down"></i></li>
+              <li>Wacom Tablets</li>
+              <li>Special Offers</li>
+              <li>Free Trials</li>
+              <li>Business</li>
+              <li>Support <i class="fas fa-angle-down"></i></li>
+              <li>Learning <i class="fas fa-angle-down"></i></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
+    </nav>
+    <section role="jumbotron">
+      <div class="jumbotron" style="background-image: url('./assets/img/bg-painter-home.jpg');">
+        <div class="container">
+          <div class="jumbotron-content w50perc">
+            <div class="jumbotron-logo">
+              <img src="./assets/img/painter-2021-wm-black.png" alt="logo">
+            </div>
+            <div class="jumbotron-text">
+              <h3>The most realistic painting experience you'll find hard to resist</h3>
+            </div>
+            <div class="jumbotron-subtitle">
+              <h4><strong><i>Limited-time offer<i><strong></h4>
+              <h4><i>Get Signature Style Brush Pack Bundle FREE (worth $179.99)<i></h4>
+            </div>
+            <div class="jumbo-btn">
+              <a href="#">learn more</a>
+              <a href="#">download trial</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </header>
 </body>
 </html>
