--- a/index.html
+++ b/index.html
@@ -81,5 +81,44 @@
       </div>
     </section>
   </header>
+  <main>
+    <div class="container-main">
+      <div class="main-title text-center">
+        <h2>More painting possibilities</h2>
+      </div>
+      <div class="moduls flex">
+        <div class="module w33perc">
+          <div class="top">
+            <img src="./assets/img/ptr-module.jpg" alt="">
+          </div>
+          <div class="bottom">
+            <h3><span>New </span>Painter Essentials 8</h3>
+            <p>The best affordable painting software for beginners</p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+        <div class="module w33perc">
+          <div class="top">
+            <img src="./assets/img/particleshop-module.jpg" alt="">
+          </div>
+          <div class="bottom">
+            <h3>Particle Shop</h3>
+            <p>Powerful Adobe &#174; Photoshop &#174; brush plugin powered by Painter</p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+        <div class="module w33perc">
+          <div class="top">
+            <img src="./assets/img/brush-pack-module.jpg" alt="">
+          </div>
+          <div class="bottom">
+            <h3>Brush Packs</h3>
+            <p>Diverse add-on packs to embellish photo composites, graphic designs and paintings</p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
