--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="main-title text-center">
         <h2>More painting possibilities</h2>
       </div>
-      <div class="moduls flex">
+      <div class="modules flex">
         <div class="module w33perc">
           <div class="top">
             <img src="./assets/img/ptr-module.jpg" alt="">
@@ -116,6 +116,33 @@
             <p>Diverse add-on packs to embellish photo composites, graphic designs and paintings</p>
             <a href="#">Learn more</a>
           </div>
+        </div>
+      </div>
+      <div class="cards flex">
+        <div class="card-text w50perc">
+          <h1>Wacom + Painter 2021</h1>
+          <h3>Satisfy all your digital painting needs with the power and precision of these award-winning bundles.</h3>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="card-img w50perc">
+          <img src="./assets/img/wacom-painter.jpg" alt="">
+          <img class="overlay" src="./assets/img/wacom.png" alt="">
+        </div>
+        <div class="card-img w50perc">
+          <img src="./assets/img/painter-master.jpg" alt="">
+        </div>
+        <div class="card-text w50perc">
+          <h1>Painter Masters</h1>
+          <h3>Gain inspiration and knowledge from professional artists who have mastered Painter, and excel in their craft.</h3>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="card-text w50perc">
+          <h1>Business & Education</h1>
+          <h3>Save money on our award-winning painting software thanks to affordable and flexible licensing options.</h3>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="card-img w50perc">
+          <img src="./assets/img/business-education.jpg" alt="">
         </div>
       </div>
     </div>
