Prima parte footer

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               <h3>The most realistic painting experience you'll find hard to resist</h3>
             </div>
             <div class="jumbotron-subtitle">
-              <h4><strong><i>Limited-time offer<i><strong></h4>
-              <h4><i>Get Signature Style Brush Pack Bundle FREE (worth $179.99)<i></h4>
+              <h4>Limited-time offer</h4>
+              <h4>Get Signature Style Brush Pack Bundle FREE (worth $179.99)</h4>
             </div>
             <div class="jumbo-btn">
               <a href="#">learn more</a>
@@ -119,7 +119,7 @@
         </div>
       </div>
       <div class="cards flex">
-        <div class="card-text w50perc">
+        <div class="card-text w50perc wacom">
           <h1>Wacom + Painter 2021</h1>
           <h3>Satisfy all your digital painting needs with the power and precision of these award-winning bundles.</h3>
           <a href="#">Learn More</a>
@@ -131,12 +131,12 @@
         <div class="card-img w50perc">
           <img src="./assets/img/painter-master.jpg" alt="">
         </div>
-        <div class="card-text w50perc">
+        <div class="card-text w50perc painter">
           <h1>Painter Masters</h1>
           <h3>Gain inspiration and knowledge from professional artists who have mastered Painter, and excel in their craft.</h3>
           <a href="#">Learn More</a>
         </div>
-        <div class="card-text w50perc">
+        <div class="card-text w50perc business">
           <h1>Business & Education</h1>
           <h3>Save money on our award-winning painting software thanks to affordable and flexible licensing options.</h3>
           <a href="#">Learn More</a>
@@ -147,5 +147,62 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="container flex">
+      <div class="footer-list container flex">
+        <div class="footer-col w25perc">
+          <ul>
+            <li>Products</li>
+            <li>Corel Painter</li>
+            <li>ParticleShop</li>
+            <li>Painter Essential</li>
+            <li>Special Offers</li>
+            <li>Free Trials</li>
+            <li>All products</li>
+          </ul>
+        </div>
+        <div class="footer-col w25perc">
+          <ul>
+            <li>Quick Links</li>
+            <li>Licensing</li>
+            <li>Tutorial & Tips</li>
+            <li>Webinars</li>
+            <li>The Painter Factory</li>
+            <li>Discovery Center</li>
+            <li>Beta Programs</li>
+          </ul>
+        </div>
+        <div class="footer-col w25perc">
+          <ul>
+            <li>Support</li>
+            <li>Register your product</li>
+            <li>Patches & Update</li>
+            <li>Knowledgebase</li>
+            <li>Uninstall Instructions</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div class="footer-col w25perc">
+          <ul>
+            <li>About Corel</li>
+            <li>Company information</li>
+            <li>Newsroom</li>
+            <li>Carrers</li>
+            <li>Partner Program</li>
+            <li>Legal information</li>
+            <li>EULA</li>
+          </ul>
+          <div class="icons">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-pinterest-p"></i>
+            <i class="fas fa-rss"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
