Pagina desktop completa

--- a/index.html
+++ b/index.html
@@ -203,6 +203,25 @@
         </div>
       </div>
     </div>
+    <div class="copyright-banner">
+      <div class="container flex">
+        <div class="copyright-left">
+          <div class="copyright-logo flex">
+            <img src="./assets/img/corelAdvantage.png" alt="">
+            <img src="./assets/img/logo-bbb.png" alt="">
+            <img src="./assets/img/101.png" alt="">
+          </div>
+        </div>
+        <div class="copyright-right flex">
+          <ul class="flex">
+            <li>Terms of Use</li>
+            <li>Privacy</li>
+            <li>Cookies</li>
+            <li>Copyright &#169; 2021 Corel Corporation. All rights reserved.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
