--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="./assets/img/ptr-module.jpg" alt="">
           </div>
           <div class="bottom">
-            <h3><span>New </span>Painter Essentials 8</h3>
+            <a href=""><h3><span>New </span>Painter Essentials 8</h3></a>
             <p>The best affordable painting software for beginners</p>
             <a href="#">Learn more</a>
           </div>
@@ -102,7 +102,7 @@
             <img src="./assets/img/particleshop-module.jpg" alt="">
           </div>
           <div class="bottom">
-            <h3>Particle Shop</h3>
+            <a href=""><h3>Particle Shop</h3></a>
             <p>Powerful Adobe &#174; Photoshop &#174; brush plugin powered by Painter</p>
             <a href="#">Learn more</a>
           </div>
@@ -112,7 +112,7 @@
             <img src="./assets/img/brush-pack-module.jpg" alt="">
           </div>
           <div class="bottom">
-            <h3>Brush Packs</h3>
+            <a href=""><h3>Brush Packs</h3></a>
             <p>Diverse add-on packs to embellish photo composites, graphic designs and paintings</p>
             <a href="#">Learn more</a>
           </div>
