Esercizio Completo Responsive

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           </ul>
         </div>
         <div class="nav-menu flex">
+          <div class="hamburger">
+            <i class="fas fa-bars"></i>
+          </div>
           <div class="logo">
             <img src="./assets/img/logo_painter.png" alt="logo">
           </div>
@@ -61,6 +64,8 @@
     <section role="jumbotron">
       <div class="jumbotron" style="background-image: url('./assets/img/bg-painter-home.jpg');">
         <div class="container">
+          <div class="overlay"></div>
+
           <div class="jumbotron-content w50perc">
             <div class="jumbotron-logo">
               <img src="./assets/img/painter-2021-wm-black.png" alt="logo">
