--- a/index.html
+++ b/index.html
@@ -60,12 +60,46 @@
           </div>
         </div>
       </div>
+      <div class="nav-list-mobile">
+        <ul>
+          <li>Products <i class="fas fa-angle-down"></i></li>
+          <li>Brushes <i class="fas fa-angle-down"></i></li>
+          <li>Wacom Tablets</li>
+          <li>Special Offers</li>
+          <li>Free Trials</li>
+          <li>Business</li>
+          <li>Support <i class="fas fa-angle-down"></i></li>
+          <li>Learning <i class="fas fa-angle-down"></i></li>
+        </ul>
+        <ul class="contacts">
+          <li>
+            <i class="fas fa-phone-alt"></i>
+            <span>1-877-582-6735</span>
+          </li>
+          <li>
+            <i class="fas fa-comment-alt"></i>
+            <span>Chat</span>
+          </li>
+          <li>
+            <i class="fas fa-user-circle"></i>
+            <span>Sign In</span>
+          </li>
+          <li>
+            <i class="fas fa-comment-alt"></i>
+            <span>Cart</span>
+          </li>
+          <li>
+            <select class="" name="">
+              <option value="">Ciao</option>
+            </select>
+          </li>
+        </ul>
+      </div>
     </nav>
     <section role="jumbotron">
-      <div class="jumbotron" style="background-image: url('./assets/img/bg-painter-home.jpg');">
+      <div class="jumbotron">
         <div class="container">
           <div class="overlay"></div>
-
           <div class="jumbotron-content w50perc">
             <div class="jumbotron-logo">
               <img src="./assets/img/painter-2021-wm-black.png" alt="logo">
