--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </ul>
         </div>
         <div class="nav-menu flex">
-          <div class="hamburger">
+          <div class="hamburger" onclick="myFunction()">
             <i class="fas fa-bars"></i>
           </div>
           <div class="logo">
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-      <div class="nav-list-mobile">
+      <div class="nav-list-mobile" id="dropdown-menu">
         <ul>
           <li>Products <i class="fas fa-angle-down"></i></li>
           <li>Brushes <i class="fas fa-angle-down"></i></li>
@@ -262,5 +262,6 @@
       </div>
     </div>
   </footer>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
