--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
         <div class="card-img w50perc">
           <img src="./assets/img/wacom-painter.jpg" alt="">
-          <img class="overlay" src="./assets/img/wacom.png" alt="">
+          <img class="overlay-img" src="./assets/img/wacom.png" alt="">
         </div>
         <div class="card-img w50perc">
           <img src="./assets/img/painter-master.jpg" alt="">
